package Bordfodboldturnering;

public class PointTurnering {
}
