package com.company;

public class Kamp {
}
