@startuml
'https://plantuml.com/class-diagram

abstract class Turnering
class Main
class Hold
class KnockoutTurnering
class PointTurnering
class Kamp

Main *-- Turnering
Turnering <|-- KnockoutTurnering
Turnering<|-- PointTurnering
Turnering o-- "16.." Hold
Turnering o-- Kamp
Kamp o-- "2" Hold


class Main {
IndlæsData()
}
class Kamp{
- int kampLængde
- kampID
- Hold[2] holdIKamp
- int[2] resultat
findVinder()
}

class Hold{
-String holdNavn
-int antalSpillere
- int målScore;

}
abstract class Turnering{
-int point
-Arraylist<Kamp>Kampe
OpretTurnering()
OpretHold()
FjernOverskud()
OpdaterMålScore()
OpdaterKampScore()
}
class KnockoutTurnering{

}
class PointTurnering{
}


@enduml